--- a/neuronas_tumbadas.ipynb
+++ b/neuronas_tumbadas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +83,7 @@
        "[[15, 4, 7, 7, 8, 13, 4, 6, 1, 9, 11, 14, 19, 3, 13, 4, 6]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +103,7 @@
        "['c o r r i d o s   t u m b a d o s']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,17 +145,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "n_steps = verso\n",
-    "window_length = n_steps + linea\n"
+    "window_length = n_steps + linea"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -214,17 +221,105 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "109/109 [==============================] - 237s 2s/step - loss: 3.2647\n",
+      "109/109 [==============================] - 326s 3s/step - loss: 3.2688\n",
       "Epoch 2/50\n",
-      "109/109 [==============================] - 242s 2s/step - loss: 2.7679\n",
+      "109/109 [==============================] - 387s 4s/step - loss: 2.7811\n",
       "Epoch 3/50\n",
-      "109/109 [==============================] - 248s 2s/step - loss: 2.5890\n",
+      "109/109 [==============================] - 441s 4s/step - loss: 2.5932\n",
       "Epoch 4/50\n",
-      "109/109 [==============================] - 241s 2s/step - loss: 2.5144\n",
+      "109/109 [==============================] - 217s 2s/step - loss: 2.5360\n",
       "Epoch 5/50\n",
-      "109/109 [==============================] - 243s 2s/step - loss: 2.4159\n",
+      "109/109 [==============================] - 231s 2s/step - loss: 2.4291\n",
       "Epoch 6/50\n",
-      " 58/109 [==============>...............] - ETA: 1:55 - loss: 2.3718"
+      "109/109 [==============================] - 223s 2s/step - loss: 2.4219\n",
+      "Epoch 7/50\n",
+      "109/109 [==============================] - 228s 2s/step - loss: 2.3331\n",
+      "Epoch 8/50\n",
+      "109/109 [==============================] - 229s 2s/step - loss: 2.2883\n",
+      "Epoch 9/50\n",
+      "109/109 [==============================] - 218s 2s/step - loss: 2.2795\n",
+      "Epoch 10/50\n",
+      "109/109 [==============================] - 221s 2s/step - loss: 2.2485\n",
+      "Epoch 11/50\n",
+      "109/109 [==============================] - 227s 2s/step - loss: 2.2969\n",
+      "Epoch 12/50\n",
+      "109/109 [==============================] - 214s 2s/step - loss: 2.4051\n",
+      "Epoch 13/50\n",
+      "109/109 [==============================] - 220s 2s/step - loss: 2.3116\n",
+      "Epoch 14/50\n",
+      "109/109 [==============================] - 216s 2s/step - loss: 2.1704\n",
+      "Epoch 15/50\n",
+      "109/109 [==============================] - 214s 2s/step - loss: 2.1938\n",
+      "Epoch 16/50\n",
+      "109/109 [==============================] - 211s 2s/step - loss: 2.2683\n",
+      "Epoch 17/50\n",
+      "109/109 [==============================] - 215s 2s/step - loss: 2.1325\n",
+      "Epoch 18/50\n",
+      "109/109 [==============================] - 216s 2s/step - loss: 2.2180\n",
+      "Epoch 19/50\n",
+      "109/109 [==============================] - 216s 2s/step - loss: 2.1391\n",
+      "Epoch 20/50\n",
+      "109/109 [==============================] - 221s 2s/step - loss: 2.0643\n",
+      "Epoch 21/50\n",
+      "109/109 [==============================] - 217s 2s/step - loss: 2.0230\n",
+      "Epoch 22/50\n",
+      "109/109 [==============================] - 227s 2s/step - loss: 2.0443\n",
+      "Epoch 23/50\n",
+      "109/109 [==============================] - 229s 2s/step - loss: 2.0031\n",
+      "Epoch 24/50\n",
+      "109/109 [==============================] - 222s 2s/step - loss: 2.0266\n",
+      "Epoch 25/50\n",
+      "109/109 [==============================] - 225s 2s/step - loss: 1.9870\n",
+      "Epoch 26/50\n",
+      "109/109 [==============================] - 219s 2s/step - loss: 1.9791\n",
+      "Epoch 27/50\n",
+      "109/109 [==============================] - 222s 2s/step - loss: 1.9733\n",
+      "Epoch 28/50\n",
+      "109/109 [==============================] - 219s 2s/step - loss: 1.9665\n",
+      "Epoch 29/50\n",
+      "109/109 [==============================] - 224s 2s/step - loss: 1.9587\n",
+      "Epoch 30/50\n",
+      "109/109 [==============================] - 224s 2s/step - loss: 1.9546\n",
+      "Epoch 31/50\n",
+      "109/109 [==============================] - 223s 2s/step - loss: 1.9489\n",
+      "Epoch 32/50\n",
+      "109/109 [==============================] - 222s 2s/step - loss: 1.9431\n",
+      "Epoch 33/50\n",
+      "109/109 [==============================] - 220s 2s/step - loss: 1.9371\n",
+      "Epoch 34/50\n",
+      "109/109 [==============================] - 219s 2s/step - loss: 1.9334\n",
+      "Epoch 35/50\n",
+      "109/109 [==============================] - 217s 2s/step - loss: 1.9296\n",
+      "Epoch 36/50\n",
+      "109/109 [==============================] - 216s 2s/step - loss: 1.9237\n",
+      "Epoch 37/50\n",
+      "109/109 [==============================] - 219s 2s/step - loss: 1.9190\n",
+      "Epoch 38/50\n",
+      "109/109 [==============================] - 218s 2s/step - loss: 1.9158\n",
+      "Epoch 39/50\n",
+      "109/109 [==============================] - 218s 2s/step - loss: 1.9129\n",
+      "Epoch 40/50\n",
+      "109/109 [==============================] - 218s 2s/step - loss: 1.9095\n",
+      "Epoch 41/50\n",
+      "109/109 [==============================] - 219s 2s/step - loss: 1.9045\n",
+      "Epoch 42/50\n",
+      "109/109 [==============================] - 221s 2s/step - loss: 1.9012\n",
+      "Epoch 43/50\n",
+      "109/109 [==============================] - 221s 2s/step - loss: 1.8974\n",
+      "Epoch 44/50\n",
+      "109/109 [==============================] - 218s 2s/step - loss: 1.8958\n",
+      "Epoch 45/50\n",
+      "109/109 [==============================] - 219s 2s/step - loss: 1.8913\n",
+      "Epoch 46/50\n",
+      "109/109 [==============================] - 222s 2s/step - loss: 1.8890\n",
+      "Epoch 47/50\n",
+      "109/109 [==============================] - 221s 2s/step - loss: 1.8863\n",
+      "Epoch 48/50\n",
+      "109/109 [==============================] - 227s 2s/step - loss: 1.8837\n",
+      "Epoch 49/50\n",
+      "109/109 [==============================] - 226s 2s/step - loss: 1.8815\n",
+      "Epoch 50/50\n",
+      "109/109 [==============================] - 225s 2s/step - loss: 1.8783\n"
      ]
     }
    ],
@@ -245,35 +340,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "stateless_model = kn.models.Sequential([\n",
     "    kn.layers.GRU(128,return_sequences=True,input_shape=[None,max_id]),\n",
     "    kn.layers.GRU(128,return_sequences=True),\n",
-    "    kn.layers.TimeDistributed(kn.layers.Dense(max_id),activation='softmax')\n",
+    "    kn.layers.TimeDistributed(kn.layers.Dense(max_id,activation='softmax'))\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "modelo_neuronas_tumbadas = joblib.load(\"neuronas_tumbadas.pkl\")\n",
-    "stateless_model.build(tf.TensorShape([None,None,max_id]))\n",
-    "stateless_model.set_weights(modelo_neuronas_tumbadas.get_weights())\n",
-    "modelo_neuronas_tumbadas = stateless_model"
+    "#stateless_model.build(tf.TensorShape([None,None,max_id]))\n",
+    "#stateless_model.set_weights(modelo_neuronas_tumbadas.get_weights())\n",
+    "#modelo_neuronas_tumbadas = stateless_model\n",
+    "#joblib.dump(modelo_neuronas_tumbadas,\"modelo-neuronas-tumbadas.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
     "def preprocess(texts):\n",
     "    X = np.array(tokenizar.texts_to_sequences(texts))-1\n",
     "    return tf.one_hot(X,max_id)"
@@ -281,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +410,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tensorflow import keras as kn\n",
+    "tokenizar = kn.preprocessing.text.Tokenizer(char_level=True)\n",
     "X_new = preprocess([\"Soy belic\"])\n",
     "Y_pred = modelo_neuronas_tumbadas.predict_classes(X_new)\n",
     "tokenizar.sequences_to_texts(Y_pred+1)[0][-1]\n",
